--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,4 @@
 {
     "restructuredtext.confPath": "${workspaceFolder}",
-    "cSpell.words": [
-        "unweildy"
-    ]
+    "cSpell.words": []
 }
